<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BrewTopia</string>
    <string name="UserName">UserName:</string>
    <string name="Password">Password:</string>
    <string name="Login">Login</string>
    <string name="CreateUser">Create New User</string>
    <string name="CreateBrew">Create Brew</string>
    <string name="RemoveBrew">Remove Brew</string>
    <string name="AddBrew">Add Brew</string>
    <string name="BrewName">Brew Name</string>
    <string name="Primary">Primary (Days)</string>
    <string name="Secondary">Secondary (Days)</string>
    <string name="Bottle">Bottle (Days)</string>
    <string name="Description">Description</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_user_brews">UserBrews</string>
    <string name="title_activity_user_schedule">UserSchedule</string>
    <string name="title_activity_user_inventory">Coming Soon</string>
    <string name="title_activity_create_brew">CreateBrew</string>
    <string name="title_activity_add_edit_view_brew">AddEditViewBrew</string>
    <string name="title_activity_boil_additions">BoilAdditions</string>
    <string name="title_activity_add_edit_view_boil_additions">AddEditViewBoilAdditions</string>
    <string name="title_activity_brew_timer_pager">TimerPager</string>
    <string name="title_activity_user_calculations">UserCalculations</string>
    <string name="title_activity_alcohol_by_volume">AlcoholByVolume</string>

    <string-array name="BeerStyles">
        <item>None</item>
        <item>Amber</item>
        <item>Blonde</item>
        <item>Brown</item>
        <item>Cream</item>
        <item>Dark</item>
        <item>Fruit</item>
        <item>Golden</item>
        <item>Honey</item>
        <item>India Pale Ale</item>
        <item>Wheat</item>
        <item>Red</item>
        <item>Pilsner</item>
        <item>Pale</item>
        <item>Light</item>
    </string-array>

    <string name="title_activity_brix_calculations">BrixCalculations</string>
    <string name="title_activity_specific_gravity">SpecificGravity</string>
    <string name="title_activity_add_edit_view_schedule">AddEditViewSchedule</string>
    <string name="title_activity_timer_boil_additions">TimerBoilAdditions</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="help">Help</string>
    <string name="title_activity_nav">NavActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

</resources>
