<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:windowTitleSize="0dp"
    tools:context=".Login"
    android:id="@+id/UserLogin"
    android:background="@drawable/brew_background">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/LoginImage"
        android:maxHeight="100dp"
        android:maxWidth="100dp"
        android:minHeight="100dp"
        android:minWidth="100dp"
        android:clickable="false"
        android:background="@drawable/beer_light"
        android:focusable="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:typeface="normal"
        android:id="@+id/LoginTitle"
        android:textColor="#B3A7A7"
        android:layout_below="@+id/LoginImage"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:inputType="textPersonName"
        android:id="@+id/UserNameTextBox"
        android:hint="User Name"
        android:background="@drawable/edit_text1"
        android:textCursorDrawable="@drawable/edit_text_curser"
        android:layout_centerVertical="true"
        android:layout_below="@+id/LoginTitle"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="50dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/PasswordTextBox"
        android:hint="Password"
        android:background="@drawable/edit_text1"
        android:textCursorDrawable="@drawable/edit_text_curser"
        android:layout_below="@+id/UserNameTextBox"
        android:layout_alignLeft="@+id/UserNameTextBox"
        android:layout_alignStart="@+id/UserNameTextBox"
        android:layout_alignRight="@+id/UserNameTextBox"
        android:layout_alignEnd="@+id/UserNameTextBox" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Remember Me"
        android:id="@+id/saveLogin"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/PasswordTextBox"
        android:layout_centerHorizontal="true"
        android:checked="true"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:id="@+id/LoginButton"
        android:clickable="true"
        android:onClick="onLoginClick"
        android:textColor="#ffffff"
        android:background="@drawable/button1"
        android:layout_below="@+id/saveLogin"
        android:layout_alignLeft="@+id/PasswordTextBox"
        android:layout_alignStart="@+id/PasswordTextBox"
        android:layout_alignRight="@+id/PasswordTextBox"
        android:layout_alignEnd="@+id/PasswordTextBox" />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CreateUser"
        android:id="@+id/CreateUserButton"
        android:clickable="true"
        android:onClick="onCreateClick"
        android:textColor="#ffffff"
        android:background="@drawable/button1"
        android:layout_below="@+id/LoginButton"
        android:layout_alignLeft="@+id/LoginButton"
        android:layout_alignStart="@+id/LoginButton"
        android:layout_alignRight="@+id/LoginButton"
        android:layout_alignEnd="@+id/LoginButton" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Continue without login"
        android:id="@+id/textViewNoLogin"
        android:textColor="@android:color/holo_blue_dark"
        android:onClick="onNoUserLogin"
        android:layout_below="@+id/CreateUserButton"
        android:layout_centerHorizontal="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="v0.0.0.0"
        android:id="@+id/verionNumber"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="#B3A7A7"
        android:onClick="onVersionClick"/>



</RelativeLayout>
